# dctmp4

./: CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  b.sh  dct.cpp  dct.hpp  decode.cpp  ffmpeg_decode.hpp  image.cpp  image.hpp  write_jpeg.cpp  write_jpeg.hpp
bld/: CMakeCache.txt  DCTEncoder  Makefile  cmake_install.cmake
